# chip-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: on_off.rs  start.rs
lib/: .gn  BUILD.gn  args.gni  callback.cpp  glue.cpp  glue.h
lib/build_overrides/: build.gni  chip.gni  nlassert.gni  nlfaultinjection.gni  nlio.gni  nlunit_test.gni  openthread.gni  ot_br_posix.gni  pigweed.gni  pigweed_environment.gni
lib/ember/: BUILD.gn
lib/include/: CHIPProjectAppConfig.h
src/: callbacks.rs  cb.rs  chip.rs  dynamic.rs  error.rs  foo.rs  lib.rs  main.rs
src/include/: bindings.h  build-config.h  config.h  singleton.h  util.h
