[package]
name = "chip-sys"
version = "0.2.0"
edition = "2021"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
categories = ["embedded", "hardware-support"]
keywords = ["sys", "matter", "connectedhomeip", "chip"]
description = "Bindings for the Matter C++ SDK"
repository = "https://github.com/ivmarkov/chip-sys"
license = "Proprietary"
readme = "README.md"
links = "chip"

[patch.crates-io]
embuild = { git = "https://github.com/esp-rs/embuild" }

[features]
default = ["std", "log?/std", "log"]
std = ["alloc"]
alloc = []
ble = []
wifi = []
thread = []
ipv4 = []
tcp = []
endpoints-4 = []
endpoints-8 = []
endpoints-16 = []
endpoints-32 = []
endpoints-64 = []
endpoints-128 = []
endpoints-256 = []
endpoints-512 = []
endpoints-1024 = []

[dependencies]
log = { version = "0.4", default-features = false, optional = true }

[build-dependencies]
anyhow = "1"
pkg-config = "0.3.26"
bindgen = "0.63"
tempfile = "3.3"
embuild = { version = "0.31", features = ["git"] }
