#import("//build_overrides/build.gni")
#chip_root = "/home/ivan/dev/v1/connectedhomeip"
chip_root = getenv("CHIP_ROOT")
#build_root = "//build"

# The location of the build configuration file.
buildconfig = "${chip_root}/build/config/BUILDCONFIG.gn"

# CHIP uses angle bracket includes.
check_system_includes = true

default_args = {
    import("//args.gni")
}
