#import("//build_overrides/build.gni")
#build_root = "//build"

chip_root = getenv("CHIP_PATH")

# The location of the build configuration file.
buildconfig = "${chip_root}/build/config/BUILDCONFIG.gn"

# CHIP uses angle bracket includes.
check_system_includes = true

default_args = {
    import("//args.gni")
}
