import("//build_overrides/chip.gni")
import("${chip_root}/build/chip/tools.gni")

assert(chip_build_tools)

static_library("chip_all") {
  output_name = "libCHIPALL"
  complete_static_lib = true  

  sources = [
    "glue.cpp",
  ]

  deps = [
    "ember",
    "${chip_root}/src/lib",
  ]

  cflags = [ "-Wconversion", "-fkeep-inline-functions" ]

  include_dirs = [ "include" ]

  output_dir = root_out_dir
}

#group("linux") {
#  deps = [ ":chip-bridge-app" ]
#}
