declare_args() {
  standalone = true
}

import("//build_overrides/chip.gni")

if (standalone) {
  import("${chip_root}/config/standalone/args.gni")
}

chip_project_config_include = "<CHIPProjectAppConfig.h>"
chip_device_project_config_include = chip_project_config_include
chip_system_project_config_include = "<SystemProjectConfig.h>"

chip_project_config_include_dirs = [ "//include", getenv("PROJ_CONFIG_INCLUDE_PATH") ]

if (standalone) {
  chip_project_config_include_dirs += [ "${chip_root}/config/standalone" ]
}

