import("//build_overrides/chip.gni")
import("${chip_root}/src/app/chip_data_model.gni")
import("//args.gni")

chip_data_model("ember") {
  zap_file = "ember.zap"

  zap_pregenerated_dir = "${chip_root}/zzz_generated/bridge-app/zap-generated" # TODO
  is_server = true

  cflags = [ "-fkeep-inline-functions" ]
}
